testdata/baselines/reference/compiler/tluaMetatableGetmetatable.errors.txt
tluaMetatableGetmetatable.tlua(11,7): error TS2322: Type '{ __index: { describe: (self: object) => string; }; }' is not assignable to type 'number'.
tluaMetatableGetmetatable.tlua(23,7): error TS2322: Type '{ __index: { a: number; }; } | { __index: { b: string; }; }' is not assignable to type 'number'.
  Type '{ __index: { a: number; }; }' is not assignable to type 'number'.
tluaMetatableGetmetatable.tlua(24,23): error TS2339: Property 'a' does not exist on type '{ a: number; } | { b: string; }'.
  Property 'a' does not exist on type '{ b: string; }'.


==== tluaMetatableGetmetatable.tlua (3 errors) ====
    // getmetatable reads back the metatable a table was paired with, rather than the union its
    // declaration has to fall back on.
    
    local Helpers = { describe = function(self: object): string return "d"; end };
    local obj = setmetatable({ n = 1 }, { __index = Helpers });
    
    local mt = getmetatable(obj);
    local back: string = mt.__index.describe(obj);
    
    // The printed type is the metatable itself.
    local shown: number = mt;
          ~~~~~
!!! error TS2322: Type '{ __index: { describe: (self: object) => string; }; }' is not assignable to type 'number'.
    
    // A table with no metatable the checker knows about keeps the declared result.
    local plain = getmetatable({ n = 1 });
    
    // A union of paired tables answers with the union of their metatables, which is to say a
    // member of one arm is readable only after narrowing, as it is for any other union.
    declare cond: boolean;
    local p1 = setmetatable({ n = 1 }, { __index = { a = 1 } });
    local p2 = setmetatable({ s = "x" }, { __index = { b = "b" } });
    local either = cond and p1 or p2;
    local em = getmetatable(either);
    local eshown: number = em;
          ~~~~~~
!!! error TS2322: Type '{ __index: { a: number; }; } | { __index: { b: string; }; }' is not assignable to type 'number'.
!!! error TS2322:   Type '{ __index: { a: number; }; }' is not assignable to type 'number'.
    local ea = em.__index.a;
                          ~
!!! error TS2339: Property 'a' does not exist on type '{ a: number; } | { b: string; }'.
!!! error TS2339:   Property 'a' does not exist on type '{ b: string; }'.
    
    // One arm with no metatable makes the whole union unknown: the value may be that arm.
    local mixed = cond and p1 or { s = "x" };
    local mm = getmetatable(mixed);
    